Thu May 29 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* db/mp_cmpr.c: Fix comparison of -1 and unsigned which broke SunOS cc
	* htdoc/install.html: Warn SunOS cc users to --disable-bigfile

	* htcommon/conf_lexer.cxx: Suppress warnings of unused identifiers
	* test/con/htdig.conf2.in: Disable testing of content_classifier
	  attribute, as didn't work until after installation

Tue May 27 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/configure, db/ac{local,include}.m4:
	  Stop test for zlib from adding -I/default/path (*this* time...)

	* htword/DBPage.h: Fix bug introduce in previous patch

	* test/Makefile.{in,am}: Replace non-portable  make -C X  by  cd X; make

Tue May 27 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* {,db/}configure, {,db/}ac{local,include}.m4:
	  Stop test for zlib from adding -I/default/path (broke SunOS cc)
	  Fix -Wall test if CCC is g++ but CC is not gcc

	* test/dbbench.cc: #include <fcntl.h> later, to avoid #define open
	  causing problems

	* includedir/synonyms: Remove trailing blank line which caused warning
	* htnet/HtCookieInFileJar.cc,htfuzzy/Synonym.cc: .get() to stop warnings
	* htlib/mhash_md5.c: char -> unsigned char to stop warnings
	* test/search.cc, htword/WordDBPage.h:
	  Casts to (int) to stop printf warnings. ALLIGN -> ALIGN

Sat May 24 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* htcommon/defaults.cc: Keep more wordlist cache pages clean

	* {,db/}configure{,.in}, {,db/}ac{local,include}.m4:
	  Patch by Richard Munroe to test if  -Wno-deprecated  needed.
	  Many bug fixes / extra search paths added.

	* include/htconfig.h.in, db/db_config.h.in:
	  Only '#define const' if not C++ (htword/WordDB.cc uses db_config.h)
	* test/dbbench.cc: check for  alloca  even if gcc
	* test/t_url: used grep -C instead of grep -c (for portability)
	* db/mp_{alloc,cmpr}.c: Removed/replaced C++ style comments

	* htdoc/require.html: Revised list of supported platforms
