@@ -1,7 +1,7 @@
 /* A lexical scanner generated by flex */
 
 /* Scanner skeleton version:
- * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.4 2003/05/29 10:36:59 lha Exp $
+ * $Header: /usr/data/kleinrob/htdig-zeugs/htdig.cvs/htdig/htcommon/conf_lexer.cxx,v 1.5 2003/06/02 13:54:56 lha Exp $
  */
 
 #define FLEX_SCANNER
@@ -239,12 +239,6 @@ YY_BUFFER_STATE yy_scan_buffer YY_PROTO(( char *base, yy_size_t size ));
 YY_BUFFER_STATE yy_scan_string YY_PROTO(( yyconst char *yy_str ));
 YY_BUFFER_STATE yy_scan_bytes YY_PROTO(( yyconst char *bytes, int len ));
 
-static void *yy_flex_alloc YY_PROTO(( yy_size_t ));
-#if !defined(YY_USES_REJECT) || !defined(YY_NO_PUSH_STATE)
-static void *yy_flex_realloc YY_PROTO(( void *, yy_size_t ));
-#endif
-static void yy_flex_free YY_PROTO(( void * ));
-
 #define yy_new_buffer yy_create_buffer
 
 #define yy_set_interactive(is_interactive) \
@@ -462,7 +456,7 @@ char *yytext;
 // or the GNU Public License version 2 or later
 // <http://www.gnu.org/copyleft/gpl.html>
 //
-// $Id: conf_lexer.cxx,v 1.4 2003/05/29 10:36:59 lha Exp $
+// $Id: conf_lexer.cxx,v 1.5 2003/06/02 13:54:56 lha Exp $
 //
 */
 #ifdef HAVE_CONFIG_H
@@ -540,6 +534,12 @@ static int yy_top_state YY_PROTO(( void ));
 #define YY_NO_POP_STATE 1
 #define YY_NO_TOP_STATE 1
 #endif
+
+static void *yy_flex_alloc YY_PROTO(( yy_size_t ));
+#if !defined(YY_USES_REJECT) || !defined(YY_NO_PUSH_STATE)
+static void *yy_flex_realloc YY_PROTO(( void *, yy_size_t ));
+#endif
+static void yy_flex_free YY_PROTO(( void * ));
 
 #ifdef YY_MALLOC_DECL
 YY_MALLOC_DECL
